# bonti-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_bot.ps1  start.txt
src/: __init__.py
src/transcriber_bot/: __init__.py  assistant_logic.py  bot.py  config.py  logging_utils.py  main.py  state.py  transcription.py
tests/: __init__.py  test_assistant_logic.py  test_bot_helpers.py  test_config.py  test_state.py  test_transcription.py
